# INTERNSHIP

./: .gitignore
Day_01/: Day_1 (Assignment).ipynb
Day_02/: Day_2 (Assignment).ipynb  Day_2 (Python Essential for GenAI).ipynb  app.py
Day_04/: Travel Itinerary Builder using LLM.ipynb
Day_05/: Day_5 (Parallel_&_Conditional_Chains).ipynb
Day_06/: Day_6_(Tools_in_Langchain_and_Agents).ipynb
Day_10/Day_10_Assignment/: Dheeraj_Chavhan_fastapi_1.py  pyproject.toml
Day_10/FAST_API/: main.py  pyproject.toml
Day_11/Blog_Management_System/: blog_app.db  blog_app.db-shm  blog_app.db-wal  main.py  models.py  pyproject.toml  requirements.txt  schema.py
Day_11/Blog_Management_System/db/: database.py
Day_11/Blog_Management_System/routers/: AIChat.py  blog.py
Day_11/Restaurant_Management_System/: main.py  models.py  pyproject.toml  requirements.txt  restaurant.db  schema.py
Day_12/: Blog_Update.txt
Day_13/: Day_13 (Assignment).js  Day_13 (Assignment_2).js
Day_13/Javascript_Essentials_for_React-1/: index.html  index.js
Day_14/Day_14_Assignment/: index.html  index.js  mathUtils.js
Day_14/Javascript_Essentials_for_React-2/: index.html  index.js  math.js
Day_15/HTML_CSS-1/: index.html
Day_15/HTML_CSS-2/: index.html  style.css
Day_2/: Day_2 (Assignment).ipynb  Day_2 (Python Essential for GenAI).ipynb  config.txt  main.py  my_program.py  people1.csv  prompt_utils.py
Day_3/: Day_3 (Assignment).ipynb  Day_3 (Introduction to LLMs and its API).ipynb
Day_4/: Day_4 (Assignment).ipynb  Day_4 (Intro to LangChain, LangChain Components).ipynb
(+21 files in other folders)
